# rustico

./: readme.md
examples/src/: main.rs
rustico/: Cargo.toml
rustico/src/: lib.rs
