[package]
name = "rustico"
description = "Rust programming, in Spanish."
readme = "../readme.md"
license = "MIT"
homepage = "https://github.com/UltiRequiem/rustico"
keywords = ["spanish", "translate", "translation", "latino"]
authors = ["UltiRequiem"]
categories = ["accessibility"]
version = "0.2.0"
edition = "2018"

[lib]
proc-macro = true
